Fix failing ArchitectureTests